--- a/src/components/Problem.css
+++ b/src/components/Problem.css
@@ -1,5 +1,5 @@
 .container-problem {
-  width: 100vw;
+  width: 100%;
   height: 100%;
   display: grid;
   grid-template-columns: 20vw 1vw auto;
