--- a/src/components/Start.css
+++ b/src/components/Start.css
@@ -14,8 +14,8 @@ body.dark-mode {
 .container-main {
   display: flex;
   flex-direction: row;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   overflow: hidden;
   background-color: var(--main-background);
   color: var(--text-color);
